main.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans);

body {
  min-height: 100vh;
}

main {
  flex: 1 calc(100vh - 110px);
  display: flex;
  justify-content: space-around;
  justify-content: center;
  /* position: relative; */
  /* background-color: rgb(111, 119, 131); */
  /* background-color: lightslategray; */
}
 
/* left section is empty */
.empty-section {
  display: flexbox;
  position: relative;
  width: 15vw;
}

.centered-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 60vw; 
}

.right-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 15vw;
  white-space: nowrap;
  position: sticky;
  top: 5px;
}

/* puts the two columns next to each other unless the screen size is too narrow*/
@media (max-width: 980px) {
  main {
    flex-direction: column;
  }
  .empty-section {
    display: none;
  }
  .centered-section {
    width: 100vw;
  }
  .about {
    width: 80vw;
  }
  .right-section {
    margin: auto;
  }
} 



footer {
  min-height: 50px;
}

.navbar-nav {
  margin-left: 3vw;
  margin-right: 3vw; 
}

.dropdown {
  position: sticky !important;
  bottom: 0; 
  right: 0 !important;
}


/* DarkMode */

.checkmark {
  display: none;
}

.active .checkmark {
  display: inline;
}

.invert {
  filter: invert(1);
}

.icon-opacity {
  opacity: 0.5;
}



/* Name field */

.custom-shadow {
  box-shadow: 0.05rem 0.1rem .5rem rgba(0, 0, 0, 0.155);
}

#name-field {
  border: unset;
  background: unset;
  border-bottom: 2px solid #434a523d;
  border-radius:0;
  background: #fff;
  border-radius: 5px;
  width: 100%;

  padding: 16px;
  margin-top: 20px;
}

#name-label {
  all: unset;
  display: block;
  position: absolute;
  padding: 0 5px;
  width: 7.75em;
  color: #5f6368;
  background: #fff;
  transition: all 150ms ease;
  transform: translate(18px, -41px);

  font-family: "Open Sans", Arial, sans-serif;
}

/* outlones text field when focused */
#name-field:focus {
  outline: none;
  padding: 15px;
  border: 2px solid #1a73e8;
}
/* moves label */
/* when the placeholder is not shown (the user has typed something) or when the field is focused */
#name-field:not(:placeholder-shown) + #name-label, #name-field:focus + #name-label {
  transform: translate(8px, -68px);
  font-size: 13px !important;
  width: 7.75em;
}
/* colors the label */
/* this doesn't have the placeholder-shown so the text turns back to black even if the user has typed in the box */
#name-field:focus + #name-label {
  color: #1a73e8; 
}

